# cpp11-snippets

./: .gitignore  README.md
CustomStdAllocator/: CMakeLists.txt  custom_std_allocator.cpp  shared_static_memory.cpp  static_memory_management.cpp
CustomStdAllocator/StaticMemoryAllocator/: allocator.cpp  allocator.hpp  allocator_impl.hpp  test.cpp
PluginsUsingMixins/: CMakeLists.txt  main.cpp
PluginsUsingMixins/stat/: plugin1.hpp  plugin1_impl.hpp  pluginunused.hpp  pluginunused_impl.hpp  stat.hpp  stat_impl.hpp
PluginsUsingMixins/stat/plugins/: plugin.hpp  plugin_impl.hpp
